[package]
name = "jdkman"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]

[dependencies]
ansi_term = "0.12"
clap = "2"
clicolors-control = "1"
derivative = "2"
lenient_semver = { version = "0.3", default-features = false }
once_cell = "1"
skim = "0.9"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
overflow-checks = true
panic = 'abort'
rpath = false

[patch.crates-io]
lenient_semver = { git = "https://github.com/knutwalker/lenient-semver", package = "lenient_semver", branch = "master" }
skim = { git = "https://github.com/knutwalker/skim", branch = "single-preselect" }
