[workspace]
members = [ "crates/libjdkman", "crates/libdurl", "crates/durl" ]

[package]
name = "jdkman"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"

[dependencies]
libjdkman = { path = "crates/libjdkman"}
console = { version = "0.14", default-features = false }
pico-args = "0.4"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
overflow-checks = true
panic = 'abort'
rpath = false
