
[package]
name = "jdkman"
version = "0.4.1"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
rust-version = "1.62.1"

[dependencies]
bstr = { version = "1.2.0", default-features = false, features = ["std"] }
cfg-if = "1.0.0"
clicolors-control = "1.0.1"
console = { version = "0.15.5", default-features = false }
curl-sys = "0.4.59"
indicatif = "0.17.3"
lenient_semver_parser = { version = "0.4.2", default-features = false, features = [ "partial", ] }
libc = "0.2.139"
once_cell = "1.17.0"
pico-args = { version = "0.5.0", features = [ "short-space-opt", "combined-flags", "eq-separator", ] }

[dependencies.curl]
version = "0.4.44"
default-features = false
features = ["static-curl", "ssl", "static-ssl", "http2", "zlib-ng-compat"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
overflow-checks = true
panic = 'abort'
rpath = false
