[package]
name = "durl"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
workspace = "../.."

[dependencies]
console = { version = "0.15.2", default-features = false }
libdurl = { path = "../libdurl", features = [ "progress_bar" ]}
libjdkman = { path = "../libjdkman"}
pico-args = "0.4.2"
ubyte = "0.10.1"
