[package]
name = "libdurl"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
workspace = "../.."

[dependencies]
curl-sys = "0.4"
indicatif = { version = "0.16", optional = true, default-features = false}
libc = "0.2"
memmap = {version = "0.7", optional = true }
nohash-hasher = { version = "0.2", optional = true }
polling = { version = "2", optional = true }
slab = { version = "0.4", optional = true }

[dependencies.curl]
version = "0.4"
default-features = false
features = [ "static-curl", "ssl", "static-ssl", "http2", "zlib-ng-compat" ]

[features]
client = ["polling", "slab"]
