[package]
name = "libdurl"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
workspace = "../.."

[dependencies]
libjdkman = { path = "../libjdkman"}
curl-sys = "0.4"
# TODO: try to get rid of http
http = "0.2"
libc = "0.2"
memchr = "2"
memmap = "0.7"
nohash-hasher = "0.2.0"
polling = "2"
slab = "0.4"
ubyte = "0.10"

[dependencies.console]
version = "0.14"
default-features = false

[dependencies.curl]
version = "0.4"
default-features = false
features = [ "static-curl", "ssl", "static-ssl", "http2", "zlib-ng-compat" ]
