[package]
name = "libdurl"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
workspace = "../.."

[dependencies]
curl-sys = "0.4.52"
indicatif = { version = "0.16.2", optional = true }
libc = "0.2.119"
memmap = { version = "0.7.0", optional = true }
nohash-hasher = { version = "0.2.0", optional = true }
polling = { version = "2.3.0", optional = true }
slab = { version = "0.4.5", optional = true }

[dependencies.curl]
version = "0.4.42"
default-features = false
features = [ "static-curl", "ssl", "static-ssl", "http2", "zlib-ng-compat" ]

[features]
client = ["nohash-hasher", "polling", "slab"]
progress_bar = ["indicatif"]
