[package]
name = "libjdkman"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
workspace = "../.."

[dependencies]
clicolors-control = "1"
once_cell = { version = "1", features = [] } # "parking_lot"
console = { version = "0.14", default-features = false }
lenient_semver_parser = { version = "0.4", default-features = false, features = ["partial"] }
