[package]
name = "libjdkman"
version = "0.1.0"
description = "Personalised sdkman frontend specialized for Java"
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/jdkman/"
repository = "https://github.com/knutwalker/jdkman/"
categories = ["command-line-utilities"]
keywords = ["sdkman", "jdk", "java"]
edition = "2018"
resolver = "2"
workspace = "../.."

[dependencies]
bstr = { version = "0.2.17", default-features = false, features = [ "std" ] }
cfg-if = "1.0.0"
clicolors-control = "1.0.1"
console = { version = "0.15.0", default-features = false }
lenient_semver_parser = { version = "0.4.2", default-features = false, features = ["partial"] }
libc = "0.2.134"
libdurl = { path = "../libdurl", features = [ "progress_bar" ] }
once_cell = "1.9.0"
